--- a/index.html
+++ b/index.html
@@ -16,10 +16,14 @@
                 <div class="dateSelectionContainer">
                     <label for="dateSelection">Workout Date</label>
                     <input type="date" id="dateSelection">
+                    <button onclick="workoutPage()" class="dateSelectionButton">Workout time!</button>
                 </div>
             </div>
             <div class="screen bodyMapScreen hidden">
                 <h1>Body Map</h1>
+            </div>
+            <div class="screen selectionPage">
+                <h1>Selection page</h1>
             </div>
         </div>
         <div class="navigationContainer">
